# resumidor-de-texto

./: Cargo.toml  Dockerfile  README.md
src/: app.rs  lib.rs  main.rs  modules.rs
src/modules/: ai.rs  file_handle.rs  mod.rs
src/modules/file_handle/: path.rs  pdf.rs  txt.rs
src/modules/traits/: convert.rs
src/services/: ai.rs
src/utils/: ai.rs  mod.rs
src/utils/cli/: app.rs  mod.rs  path.rs  save.rs  wait.rs
src/utils/file_handle/: create_file.rs  mod.rs  pdf.rs  txt.rs
