[package]
name = "resumidor-de-pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
anyhow = "1.0.100"
pdf-extract = "0.10.0"
clear_screen = "0.1.0"
colored = "3.0.0"
crossterm = "0.29.0"
